# esp8266-arduino-cmake

./: CMakeLists.txt
Template_ESP8266/: BlynkProvisioning.h  CMakeLists.txt  ConfigMode.h  OTA.h  Settings.h  Template_ESP8266.cpp
cmake/: arduino.cmake  comport_settings.cmake  esp8266.cmake  ota_deploy.cmake
esp_server/: esp_server.cpp
